--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,11 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 numpy==1.18.2
+pandas==1.0.3
 plotly==4.6.0
+python-dateutil==2.8.1
+pytz==2019.3
 retrying==1.3.3
 scipy==1.4.1
+six==1.14.0
 Werkzeug==1.0.1
