--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+astroid==2.3.3
+autopep8==1.4.4
 certifi==2020.4.5.1
 click==7.1.1
 dash==1.10.0
@@ -9,15 +11,22 @@ Flask==1.1.2
 Flask-Compress==1.4.0
 future==0.18.2
 gunicorn==20.0.4
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 numpy==1.18.2
 pandas==1.0.3
 plotly==4.6.0
+pycodestyle==2.5.0
+pylint==2.4.4
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.3.1
 retrying==1.3.3
 scipy==1.4.1
 six==1.14.0
 Werkzeug==1.0.1
+wrapt==1.12.1
